Adding option to choose between online and offline compilation of OpenCL source
Some old loaders don't support SPIR-V so we add option for online
compilation of OpenCL so we can run on those.

--- a/opencl_square/Makefile
+++ b/opencl_square/Makefile
@@ -4,8 +4,17 @@ CCL:=clang
 CFLAGS:=-Wall -Wextra -O2 -DCL_TARGET_OPENCL_VERSION=$(OPENCL_VERSION)
 CCLFLAGS:=-O3
 LDFLAGS:=-lOpenCL
+SPIRV_LINKER:=llvm-spirv
 
-all: square square.bc
+# Some old loaders don't support SPIR-V,
+# so by deafult we compile online.
+ifeq ($(COMPILE_ONLINE),)
+	COMPILE_ONLINE := 1
+endif
+
+CFLAGS += -DCOMPILE_ONLINE=$(COMPILE_ONLINE)
+
+all: square square.spv
 
 %.o: %.c Makefile
 	$(CC) $< -c -o $@ $(CFLAGS)
@@ -15,6 +24,9 @@ square: square.o Makefile
 
 square.bc: square.cl Makefile
 	$(CCL) -c -target spir64 -emit-llvm -o $@ $< $(CCLFLAGS)
+
+square.spv: square.bc Makefile
+	$(SPIRV_LINKER) $< -o $@
 
 clean:
 	rm -f square square.o square.bc
