matmul: Add tests against PyTorch's matrix multiply
We generate random matricies and multiply them using pytorch. We save
the result and source data in safetensors format, that we later load in
C++, recompute and compare the results.

--- a/matmul/meson.build
+++ b/matmul/meson.build
@@ -1,5 +1,11 @@
 project('matmul', 'cpp')
 
+fmt = dependency('fmt', required: true)
+mipc = dependency('mipc', required: true)
+rapidjson = dependency('RapidJSON', required: true)
+
+test_files_path = meson.source_root() + '/tests/files/'
+
 cpp_args_common = [
   '-std=c++23',
   '-Wall',
@@ -15,6 +21,20 @@ libmatmul = static_library(
   'matmul',
   libmatmul_src,
   cpp_args: cpp_args_common,
+  dependencies: [
+    fmt,
+    mipc,
+    rapidjson,
+  ],
+)
+
+python3 = find_program('python3')
+
+get_type_name_h = custom_target(
+    'get_type_name.h',
+    output : 'get_type_name.h',
+    input : 'srcgen/gen_get_type_str',
+    command : [python3, '@INPUT@', '@OUTPUT@'],
 )
 
 executable(
@@ -26,12 +46,17 @@ executable(
 
 test_src = [
   'tests/test.cc',
+  'tests/test_against_pytorch.cc',
+  get_type_name_h,
 ]
 
 executable(
   'test_matmul',
   test_src,
-  cpp_args: cpp_args_common,
+  cpp_args: [
+    cpp_args_common,
+    '-DCONFIG_TEST_FILES_PATH="' + test_files_path + '"',
+  ],
   link_with: libmatmul,
   include_directories: ['../']
 )
