matmul: Add -Wno-format-security to common cpp flags
Clang is issuing a false positive here, we don't care, because we don't
take user input.

--- a/matmul/meson.build
+++ b/matmul/meson.build
@@ -10,6 +10,14 @@ cpp_args_common = [
   '-std=c++23',
   '-Wall',
   '-Wextra',
+
+  #
+  # Clang complains about passing plain, "runtime",
+  # strings as the format and only parameter to the printf.
+  #
+  # Just shut it's mouth. Clang's just wrong.
+  #
+  '-Wno-format-security',
 ]
 
 libmatmul_src = [
