--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 matmul/tests/files/pytorch_512x512.safetensors filter=lfs diff=lfs merge=lfs -text
 matmul/tests/files/pytorch_1024x1024.safetensors filter=lfs diff=lfs merge=lfs -text
+tests/files/pytorch_2048x2048.safetensors filter=lfs diff=lfs merge=lfs -text
