matmul: classify: Allow graceful training loop interruption

--- a/matmul/meson.build
+++ b/matmul/meson.build
@@ -54,6 +54,7 @@ libmatmul_src = [
     'threading.cc',
     'matmul_cuda.cu',
     'matmul_cuda.cc',
+    'interrupt.cc',
 ]
 
 libmatmul = static_library(
